<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="app_name">My Scratch!</string>
    <string name="settings">Settings</string>
    <string name="add_tool">Add Tool</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="cancel">Cancel</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="tool_name">Tool name</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_description">Recipe description</string>
    <string name="tools">Tools</string>
    <string name="tools_used">Tools used</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_used">Ingredients used</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here">New here?</string>
    <string name="add_image">Add Image</string>
    <string name="instructions">Instructions</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member?</string>
    <string name="user">User</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="log_out">Log out</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
    <string name="search_hint">Recipes or users…</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">testtesttest\ntesttesttest\ntesttesttest\ntesttest</string>
    <string name="ingredient_name">Ingredient name</string>
    <string name="tool_name">Tool name</string>
    <string name="recipe_name">Recipe name</string>
    <string name="recipe_description">Recipe description</string>
    <string name="tools">Tools</string>
    <string name="tools_used">Tools used</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_used">Ingredients used</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_here">New here?</string>
    <string name="add_image">Add Image</string>
    <string name="instructions">Instructions</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_account">Create Account</string>
    <string name="already_a_member">Already a member?</string>
    <string name="user">User</string>
    <string name="uploading_image">Uploading image…</string>
    <string name="search">Search</string>
    <string name="create">Create</string>
    <string name="log_out">Log out</string>
    <string name="share_recipe">Share Recipe</string>
    <string name="edit_recipe">Edit Recipe</string>
</resources>