<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateRecipeActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/notebook_background"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayoutCreateRecipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.scratchappfeature.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarCreateRecipe"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            android:visibility="visible"
            app:popupTheme="@style/Theme.scratchappfeature.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/recipeNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/appBarLayoutCreateRecipe"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/recipe_name"/>

    <EditText
        android:id="@+id/recipeDescriptionEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_below="@id/recipeNameEditText"
        android:textSize="16sp"
        android:inputType="text"
        android:hint="@string/recipe_description"/>

    <LinearLayout
        android:id="@+id/toolsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/recipeDescriptionEditText"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageButton
            android:id="@+id/addToolImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_add_circle_24" />

        <TextView
            android:id="@+id/toolsHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/tools"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/toolsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolsLinearLayout"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/tools_used" />

    <LinearLayout
        android:id="@+id/ingredientsLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/toolsTextView"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <ImageButton
            android:id="@+id/addIngredientImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"
            android:paddingTop="2dp"
            android:paddingBottom="2dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@null"
            android:src="@drawable/ic_baseline_add_circle_24" />

        <TextView
            android:id="@+id/ingredientsHeaderTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/ingredients"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <TextView
        android:id="@+id/ingredientsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ingredients_used"
        android:layout_below="@+id/ingredientsLinearLayout"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="25dp"
        android:layout_marginEnd="25dp" />

</RelativeLayout>
