<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/feedCardRecipeImageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:padding="2dp"
            android:scaleType="centerCrop"
            android:src="@drawable/no_recipe_image"/>

        <TextView
            android:id="@+id/feedRecipeNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_below="@id/feedCardRecipeImageView"
            android:hint="@string/recipe_name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/feedRecipeDescriptionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedRecipeNameTextView"
            android:layout_marginStart="8dp"
            android:gravity="start"
            android:hint="@string/description"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/feedUserAvatarImageView"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_below="@id/feedRecipeNameTextView"
            android:layout_marginEnd="4dp"
            android:layout_toStartOf="@id/feedUserNameTextView"
            android:src="@drawable/ic_baseline_account_circle_24" />

        <TextView
            android:id="@+id/feedUserNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/feedRecipeNameTextView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:gravity="end"
            android:hint="@string/user"
            android:textSize="15sp" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>